--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -135,55 +135,55 @@ Now that the stage is set, we continue with a description of the puzzling experi
 \begin{figure}
     \centering
     \IncludeGraphics[width=\textwidth]{fig_exp2.png}
-\caption{ \label{fig:GdMn2O5_experiment1} {\bf Experimental measurements of the ferroelectric polarization at 2.3 K.} a) Magnetic field applied at 1$^\circ$ which leads to a two-state hysteresis loop. The left panel shows the result of our measurements, whereas the right one shows previous measurements in Ref.~\cite{Lee13}. This behavior on the right panel is identical to our theoretical results. b) Magnetic field applied at 9$^\circ$, where the four-state hysteresis loop appears. c) Field applied at 15$^\circ$, again leading to a two-state hysteresis loop.  
-In these plots, we have denoted the four discussed states by the labels 1-4. The arrows and graph color denote the direction of magnetic field-change during the sweep, as indicated by the inset of panel (a).}
+\caption{ \label{fig:GdMn2O5_experiment1} {\bf Experimental measurements of the ferroelectric polarization at 2.3 K.} a) Magnetic field applied at 1$^\circ$ which leads to a two state hysteresis loop. The left panel shows the result of our measurements, whereas the right one shows the previous measurements of Ref.~\cite{Lee13}. This behavior on the right panel is identical to our theoretical results (see Sec.~\ref{sec:GdMn2O5_results_discussion}). b) Magnetic field applied at 9$^\circ$, where the four state hysteresis loop appears. c) Field applied at 15$^\circ$, again leading to a two state hysteresis loop.  
+In these plots, we have denoted the four discussed states by the labels 1-4. The arrows and graph color denote the direction of magnetic field-change during the sweep, as indicated by the inset of the left graph of panel (a).}
 \end{figure}
 \begin{figure}
     \centering
     \IncludeGraphics{exp_plusvsminus.png}
-\caption{ \label{fig:GdMn2O5_experiment2} {\bf Angle and temperature dependence of the four-state switching.} By comparing panels (a) and (b) we can see that the sign of the field angle $\phi_H$ does not matter for the four-state switching. c) Temperature dependence of the switching hysteresis at the magic angle. Above 4 K (upper panel) the more usual two-state hysteresis is observed, whereas below 4 K (lower panel) the four-state behavior starts to arise. The states, colors and arrows are indicated in the same way as in Fig.~\ref{fig:GdMn2O5_experiment1}.}
+\caption{ \label{fig:GdMn2O5_experiment2} {\bf Angle and temperature dependence of the four state switching.} By comparing panels (a) and (b) we can see that changing the sign of the field angle $\phi_H$ does not influence the four state switching. c) Temperature dependence of the hysteresis loop at the magic angle. Above 4 K (upper panel) the more usual two state hysteresis loop is observed, whereas below 4 K (lower panel) the four state behavior starts to arise. The states, colors and arrows are indicated in the same way as in Fig.~\ref{fig:GdMn2O5_experiment1}.}
 \end{figure}
 
 The measurements we present in this Section were performed in the group of A. Pimenov, on single crystal GdMn$_2$O$_5$ samples grown by S.-W. Cheong's group.
-Magnetic fields were applied to the sample under varying angles $\phi_H$ with respect to the crystalline $a$-axis, and swept up and down while tracking the evolution of $P_b$.
-Only positive fields were applied, but as it turns out, the behavior is identical for fields with opposite signs. 
+Magnetic fields were applied under varying angles $\phi_H$ with respect to the crystalline $a$-axis, and swept up and down while tracking the evolution of $P_b$.
+The results for such measurements at 2 K are displayed in Fig.~\ref{fig:GdMn2O5_experiment1}.
+Only positive fields were applied, but the behavior is identical for fields with opposite signs, as we will show later in Section~\ref{sec:GdMn2O5_magnetic_configuration}. 
 In previous experimental measurements, the magnetic field was only applied along the crystalline $a$-axis, i.e. $\phi_H = 0$~\cite{Lee13}.
-The results for the low temperature measurements are displayed in Fig.~\ref{fig:GdMn2O5_experiment1}.
 \\\\
 In the following we will refer to three distinct switching regimes: the low angle, ``magic'' angle, and high angle regime.
-They correspond to the values of $\phi_H$ shown in panels (a), (b), and (c) respectively.
-Before delving into a detailed analysis of the experiments, we would like to point out that the low angle behavior shown in left side of panel (a) does not coincide with the behavior found in previous experiments in Ref.~\cite{Lee13} on the same sample, which is shown on the right.
-There it was found that when the field is applied along the $a$-axis, a two-state switching with a reversal of the polarization is observed, similar to the 1--4 branch in panel (b) of Fig.~\ref{fig:GdMn2O5_experiment1}.
+They correspond to the values of $\phi_H$ shown in panels (a), (b), and (c) of Fig.~\ref{fig:GdMn2O5_experiment1}, respectively.
+Before delving into a detailed analysis of the experiments, we would like to point out that the low angle behavior shown in left side of panel (a) does not coincide with the behavior found in previous experiments in Ref.~\cite{Lee13} on the same sample, shown on the right.
+There it was found that when the field is applied along the $a$-axis, a two state switching with a reversal of the polarization is observed, similar to the 1--4 branch in panel (b) of Fig.~\ref{fig:GdMn2O5_experiment1}.
 We are not quite sure what leads to this discrepancy between the measurements. It could be related to the poling history of the sample or some domain related behavior.
-For now, this discrepancy is not that important, but it is nonetheless at odds with our theoretical findings which demonstrate a behavior similar to the previous measurements in Ref.~\cite{Lee13}. 
+This discrepancy is not that important in light of the current discussion, but it is nonetheless at odds with our theoretical findings which demonstrate a behavior similar to the previous measurements in Ref.~\cite{Lee13}. 
 \\\\
-Turning back to the results shown in Fig.~\ref{fig:GdMn2O5_experiment1}, we see that the switching behavior changes significantly with $\phi_H$.
-In the high angle case, showcased in panel (c), we can observe a two state switching behavior, in which $P_b$ does not vary much, but a clear jump appears around a field magnitude of 5 T.
+Turning back to the results shown in Fig.~\ref{fig:GdMn2O5_experiment1}, we can observe that the switching behavior changes significantly with $\phi_H$.
+In the high angle case, showcased in panel (c), we can observe a two state switching loop, in which $P_b$ does not vary much but a clear jump appears around a field magnitude of 5 T.
 This signals a sudden change in the magnetic configuration of the system, since $P_b$ is a direct result of it.
 The most peculiar, and completely novel, behavior can be found around the magic angle $\phi_H \sim 9^\circ$ in panel (b) of Fig.~\ref{fig:GdMn2O5_experiment1}.
-During the up-down-up-down field sweeps in this switching regime, we find that four different states are visited sequentially, with four different values of $P_b$.
+During the up-down-up-down field sweeps, we find that four different states are visited sequentially in this switching regime, with four different values of $P_b$.
 \\\\
 At this stage, we would like to draw the attention of the reader to two facts.
 
 First, compared to the usual magnetoelectric switching with one low-field state and one high-field state, here a single up--down cycle of the field reverses the polarization, and correspondingly leads to a different final state.
 In order to return the system to its original configuration another up--down cycle is required.
 
-Second, this four-state loop is fully deterministic, meaning that when multiple such double cycles are applied, the system tracks close to exactly the same $P_b$ loop every time.
+Second, this four state loop is fully deterministic, meaning that when multiple such double cycles are applied, the system tracks close to exactly the same $P_b$ loop every time.
 \\\\
-If we ignore for a brief moment the low-angle behavior displayed in the left panel of Fig.~\ref{fig:GdMn2O5_experiment1}(a), and replace it with the behavior on the right~\cite{Lee13}, i.e. following the 1--4 branch in panel (b), we can imagine the four-state switching as an interpolation between the high and low angle switching regimes.
+If we ignore for a brief moment the low-angle behavior displayed in the left panel of Fig.~\ref{fig:GdMn2O5_experiment1}(a), and replace it with the behavior on the right~\cite{Lee13}, i.e. following the 1--4 branch in panel (b), we can imagine the four state switching as an interpolation between the high and low angle switching regimes.
 This is a very important observation and will lead to one of the main results of this work: the topological nature of the magnetoelectric switching in this material.
 \\\\
-Turning now to the measurements displayed in Fig.~\ref{fig:GdMn2O5_experiment2}, we find that the four-state loop does not depend on the sign of $\phi_H$ (compare panels (a,b)).
-From the two panels in (c), displaying measurements with $\phi_H$ along the magic angle, but at two different temperatures (15 K and 4 K), we can observe that the four-state hysteresis loop only appears at low temperatures.
-For higher temperatures a more usual two-state loop is found, similar to the high angle loop in panel (c) of Fig.~\ref{fig:GdMn2O5_experiment1}.
+Turning now to the measurements displayed in Fig.~\ref{fig:GdMn2O5_experiment2}, we find that the four state loop is not affected by a sign change of $\phi_H$ (compare panels (a,b)).
+From the two panels in (c), displaying measurements at 15 K and 4 K with $\phi_H$ along the magic angle, we can observe that the four state hysteresis loop only appears at low temperatures.
+For higher temperatures a more usual two state loop is found, similar to the high angle loop in panel (c) of Fig.~\ref{fig:GdMn2O5_experiment1}.
 \\\\
-To conclude this Section, we would like to point out that we focus on the overall switching behavior, i.e. we ignore the many interesting details that can be found by careful study of the $P_b$ graphs.
-For example, in Fig.~\ref{fig:GdMn2O5_experiment1}(b) one can find three distinct steps that appear around 5 T during the 1$\rightarrow$2 and 3$\rightarrow$4 switching.
+To conclude this Section, we would like to point out that we focus on the overall switching behavior, i.e. we ignore the details that can be found by careful study of the $P_b$ graphs.
+For example, in Fig.~\ref{fig:GdMn2O5_experiment1}(b) one can observe three distinct steps that appear around 5 T during the 1$\rightarrow$2 and 3$\rightarrow$4 switching.
 These steps are, however, absent at the same field magnitude, when the system is on the 2$\rightarrow$3 and 4$\rightarrow$1 branch.
 %to a transition, on an ionic level, to states with higher Gd spin, or it might be related
 Their origin might be related to the spins in the Mn chains rotating individually, rather than in unison as we will assume in our model.
-Further research is required to solidify this statement, here we rather choose to focus on unraveling the main behavior of the four-state loop flanked in $\phi_H$ parameter-space by two more usual two-state switching loops.
-% This novel four-state switching is the focus of this Chapter, and is found to originate from a unidirectional rotational motion of the spins, a sort of microscopic magnetic analogue to the crankshaft in a car, converting the linear back--and--forth variation of the magnetic field into spin rotations.
+Further research is required to solidify this statement, here we rather choose to focus on unraveling the main behavior of the four state loop flanked in $\phi_H$ parameter-space by two more usual two state switching loops.
+% This novel four state switching is the focus of this Chapter, and is found to originate from a unidirectional rotational motion of the spins, a sort of microscopic magnetic analogue to the crankshaft in a car, converting the linear back--and--forth variation of the magnetic field into spin rotations.
 
 \section{Theory \label{sec:GdMn2O5_Theory}}
 In order to describe the puzzling experimental observations we construct a semi-classical model with eight Gd spins denoting the eight sublattice magnetizations, and two AFM order parameters that describe the Mn chains.
@@ -375,7 +375,7 @@ It is extreme in the sense that it requires no tunneling whatsoever, which forms
 
 We now turn to a discussion of the results obtained from the simulations of the effective spin Hamiltonian Eq.~\eqref{eq:GdMn2O5_model}.
 
-\section{Results and discussion}
+\section{Results and discussion \label{sec:GdMn2O5_results_discussion}}
 \begin{figure}
     \IncludeGraphics{Pb_3panels}
     \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of the angle dependent magnetoelectric switching.}
@@ -490,7 +490,7 @@ where $M_{ij}$ denotes the value of the total magnetization for the state at bar
 This suggests that in the case of $\phi_H=10^\circ$ we have been discussing so far, $M_{23} < M_{12}$, which is confirmed by our simulations.
 Indeed, when $H<H^*$ as the field decreases, this leads to $E_{23} < E_{12}$ causing the system to move from state 2 to state 3.
 
-\subsection{Magnetic Configuration}
+\subsection{Magnetic Configuration \label{sec:GdMn2O5_magnetic_configuration}}
 \begin{figure}[h!]
     \centering
     \IncludeGraphics{4configs.png}
@@ -520,7 +520,7 @@ This peculiar ``crankshaft''-like behavior is a direct result of the evolution o
 We use this crankshaft analogy because the material seemingly converts the linear up--down motion of the magnetic field (the ``piston'') into the circular motion performed by the spins (the ``driveshaft'').
 \\\\
 This brings us to the final remark we wish to make on the motion of the spins.
-By applying the field at a negative magic angle $\phi_H = -10^\circ$, we find that $\bm L_2$ now performs the full cycle rotation, along with the Gd spins that it couples strongest with, leading to the same four-state switching loop as for $\phi_H = 10^\circ$ (compare panels (a,b) in Fig.~\ref{fig:GdMn2O5_experiment2}).
+By applying the field at a negative magic angle $\phi_H = -10^\circ$, we find that $\bm L_2$ now performs the full cycle rotation, along with the Gd spins that it couples strongest with, leading to the same four state switching loop as for $\phi_H = 10^\circ$ (compare panels (a,b) in Fig.~\ref{fig:GdMn2O5_experiment2}).
 This behavior follows from another symmetry operation that is present in the system: the $\tilde{2}_x$ crystal symmetry combined with a translation by $a$, $S_a$, under which $(L_1^x,L_1^y) \rightarrow (L_2^x,-L_2^y)$.
 In this case, horizontal valleys appear in the potential energy landscape instead of the vertical ones in Figs.~\ref{fig:GdMn2O5_theory}(d-f) and ~\ref{fig:GdMn2O5_heatmap}.
 Accordingly, $\bm{L}_2$ at this negative magic angle rotates in the opposite direction compared to  $\bm{L}_1$ at $\phi_{\rm H} = +10^\circ$.
@@ -532,8 +532,8 @@ Notice how all field cycling procedures depicted in panel (a) lead to the same s
 Since the ferroelectric polarization $P_b$ is a direct result of the magnetic configuration, we briefly comment on how these different switching behaviors for the spin are translated in to the plots of the polarization in Fig.~\ref{fig:GdMn2O5_theory} and Fig.~\ref{fig:GdMn2O5_experiment1}.
 Most of the evolution of $P_b$ can be understood from the $\bm L_1 \cdot \bm L_2$ part. The contribution arising from the Gd--Mn exchange striction behaves similarly due to strong coupling between them ($v_1$), with an additional superposed contribution due to the slight rotations that the Gd spins perform away from the switching fields.
 At $\phi_{\rm H} = \pm 20^\circ$, both N\'eel vectors $\bm L_\alpha$ toggle between two directions in such a way that the angle between them and, hence, the ferroelectric polarization changes very little (Figs.~\ref{fig:GdMn2O5_regimes}(b,f),~\ref{fig:GdMn2O5_experiment1}(c), and~\ref{fig:GdMn2O5_theory}(c)). 
-On the other hand, at $\phi_{H}=0^\circ$, $\bm{L}_1$ and  $\bm{L}_2$ tilt in opposite directions. The resulting large variation of the angle between these two vectors gives rise to the two-state switching with the polarization reversal, as shown in Figs.~\ref{fig:GdMn2O5_regimes}(d),~\ref{fig:GdMn2O5_experiment1}(a), and ~\ref{fig:GdMn2O5_theory}(a). This suggests that the small-amplitude relative rotation of $\bm{L}_1$ and $\bm{L}_2$ is an electromagnon mode that could be excited by oscillating $H_a$ or $E_b$.
-On the boundary between the two extremes one of the $\bm L_\alpha$ toggles while the other performs the full 360$^\circ$ rotation, leading to the four-state polarization loops.
+On the other hand, at $\phi_{H}=0^\circ$, $\bm{L}_1$ and  $\bm{L}_2$ tilt in opposite directions. The resulting large variation of the angle between these two vectors gives rise to the two state switching with the polarization reversal, as shown in Figs.~\ref{fig:GdMn2O5_regimes}(d),~\ref{fig:GdMn2O5_experiment1}(a), and ~\ref{fig:GdMn2O5_theory}(a). This suggests that the small-amplitude relative rotation of $\bm{L}_1$ and $\bm{L}_2$ is an electromagnon mode that could be excited by oscillating $H_a$ or $E_b$.
+On the boundary between the two extremes one of the $\bm L_\alpha$ toggles while the other performs the full 360$^\circ$ rotation, leading to the four state polarization loops.
 %
 %
 \subsection{Topology \label{sec:GdMn2O5_topology}}
@@ -543,8 +543,8 @@ We will sharpen our previous statements in this Section and comment on the gener
 Comparing the trajectories (white lines in Fig.~\ref{fig:GdMn2O5_theory}(d-f) and Fig.~\ref{fig:GdMn2O5_heatmap}) that describe the field evolution of the state, we see that it is confined to one of the vertical valleys, as discussed previously.
 This is true for all regimes. When $\phi_H = +10^\circ$, $\phi_{L_1}$ varies strongest, whereas for $\phi_H = -10^\circ$, $\phi_{L_2}$ varies the most, while the system as a whole remains inside the valley that hosts the original state, in both cases.
 
-In the two-state regimes (Fig.~\ref{fig:GdMn2O5_theory}(d,f)), the system remains in the neighborhood of the starting point, with the trajectory contractible to a single point. 
-In the four-state regime in Fig.~\ref{fig:GdMn2O5_theory}(e), as we have seen, the system progresses through the entire valley in a unidirectional sense, connecting the top and bottom edges, with $\bm{L}_1$ rotating a full $360^\circ$.
+In the two state regimes (Fig.~\ref{fig:GdMn2O5_theory}(d,f)), the system remains in the neighborhood of the starting point, with the trajectory contractible to a single point. 
+In the four state regime in Fig.~\ref{fig:GdMn2O5_theory}(e), as we have seen, the system progresses through the entire valley in a unidirectional sense, connecting the top and bottom edges, with $\bm{L}_1$ rotating a full $360^\circ$.
 
 In this case, the path can not be fully contracted in the same way which highlights its {\em  topologically distinct} nature compared to the other two regimes.
 Indeed, for such trajectories in the two-dimensional $(\phi_{\rm L1},\phi_{\rm L2})$ space with a torus topology, we can define a winding number $Q$ as:
