--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -187,18 +187,18 @@ Further research is required to solidify this statement, here we rather choose t
 
 \section{Theory \label{sec:GdMn2O5_Theory}}
 In order to describe the puzzling experimental observations we construct a semi-classical model with eight Gd spins denoting the eight sublattice magnetizations, and two AFM order parameters that describe the Mn chains.
-The Gd spins are described by unit vectors $\bm{S}_i, i=1..8$, and we denote the two AFM order parameters as $\bm{L}_\alpha, \alpha=1,2$ (also unit vectors). See Fig~\ref{fig:GdMn2O5_unit_cell} for further details.
+The Gd spins are described by unit vectors $\bm{S}_i, i=1..8$, and we denote the two AFM order parameters as $\bm{L}_\alpha, \alpha=1,2$ (also unit vectors). See Fig~\ref{fig:GdMn2O5_unit_cell}(a) for further details.
 Furthermore, the ferroelectric polarization is represented by the slave order parameter $P_b$.
 Using a single $\bm{L}_\alpha$ to describe the orientation of all the Mn ions in a chain assumes that their spins are perfectly AFM ordered, i.e. $\bm{S}_i = L, \bm{S}_{i+1} = - \bm{L}$.
-This simplification is justified by the large intrachain AFM exchanges, compared with the relatively small exchanges between the two chains.
+This simplification is justified by the large intrachain AFM exchanges, compared with the relatively small exchanges between the two chains~\cite{Souza11}.
 
 A further simplification we adopt here is to confine all spins to the $ab$-plane.
-It was shown experimentally that indeed the $c$-direction acts as the magnetic hard-axis, and that the magnetic order is repeated along the crystalline $c$-direction~\cite{Lee13}.
+Indeed, it was shown experimentally that the $c$-direction acts as the magnetic hard-axis, and that the magnetic order is repeated along the crystalline $c$-direction~\cite{Lee13}.
 This lowers the dimensionality of the problem from 3D to 2D, with a single angle for every Gd spin and Mn chain as the remaining degrees of freedom, thus greatly simplifying the numerical complexity.
 Since all spins and AFM order parameters are taken as unit vectors, their sizes are implicitly included in the model parameters.
 \\\\
 The first step in order to derive the effective Hamiltonian in terms of the above order parameters is to convert the microscopic interactions of the individual Mn spins into the effective interactions of the $\bm{L}_\alpha$.
-More specifically, we include energy contributions due to small spin cantings away from the perfect collinear intrachain spin configuration, as showcased in Fig.~\ref{fig:GdMn2O5_canting}.
+More specifically, we include two energy contributions due to small spin cantings away from the perfect collinear intrachain spin configuration, as showcased in Fig.~\ref{fig:GdMn2O5_canting}.
 
 \begin{figure*}[h]
     \centering
@@ -206,52 +206,53 @@ More specifically, we include energy contributions due to small spin cantings aw
 	\caption{{\bf Energy contributions due to spin canting.} a) The Zeeman contribution due to the weak ferromagnetic moment along the field (H, red arrow), as a result of the spin canting. b) The contribution due to Heisenberg exchange when previously parallel Mn spins are canted towards a more AFM alignment. This is a direct result of the geometric frustration. The collinear configuration is denoted by the black arrows, with the dashed teal arrows showing the orientation due to the slight canting by the angle $\delta \theta$. \label{fig:GdMn2O5_canting}}
 \end{figure*}
 
-Starting with the contribution due to the Zeeman energy when a magnetic field is applied, we can write 
+Starting with the contribution due to the Zeeman energy when a magnetic field $\bm H$ is applied, we can write:
 \begin{equation}
-	E_Z = -g \mu_B \bm{H} \cdot (\pmb{\sigma}_i + \pmb{\sigma}_{i+1})\nonumber,
+	E_Z = -g \mu_B \bm{H} \cdot (\pmb{\sigma}_i + \pmb{\sigma}_{i+1}),
 \end{equation}
-where $g \approx 2$, $\mu_B$ denotes the Bohr magneton, and $\sigma_i$ and $\sigma_{i+1}$ two neighboring Mn spins inside a chain. 
+where $g \approx 2$, $\mu_B$ denotes the Bohr magneton, and $\bm \sigma_i$ and $\bm \sigma_{i+1}$ two neighboring Mn spins inside a chain. 
 Obviously, no energy gain is possible for perfectly antiparallel spins since then $(\pmb{\sigma}_i + \pmb{\sigma}_{i+1})=0$.
 
-However, if both spins cant slightly towards the applied field, a weak ferromagnetic moment is created that will couple to the magnetic field (see Fig.~\ref{fig:GdMn2O5_canting}(a)).
+However, if the chain is oriented perpendicular to the applied field, and both spins cant slightly towards the applied field, a weak ferromagnetic moment is created that will couple to this field (see Fig.~\ref{fig:GdMn2O5_canting}(a)).
 To include this contribution, we perform an expansion in the small canting angle $\delta \theta$ away from the collinear configuration:
 \begin{align}
-	E &= \Jpar \cos(2\delta \theta) - g \mu_B H \left[\cos(\theta_L - \theta_H + \delta \theta) + \cos(\theta_L + \pi - \theta_H - \delta \theta)\right],\nonumber\\
+	E &= \Jpar \bm \sigma_i \cdot \bm \sigma_{i+1} -g \mu_B \bm{H} \cdot (\pmb{\sigma}_i + \pmb{\sigma}_{i+1})\nonumber\\
+	 &\approx \Jpar \cos(2\delta \theta) - g \mu_B H \left[\cos(\theta_L - \theta_H + \delta \theta) + \cos(\theta_L + \pi - \theta_H - \delta \theta)\right]\nonumber\\
 	&= \Jpar \left( 1+2\delta\theta^2 \right) - 2 g \mu_B H \sin(\theta_L - \theta_H)\delta\theta \label{eq:GdMn2O5_zeeman_exp},
 \end{align}
 where $\Jpar$ denotes the intrachain magnetic exchange coefficient, and $\theta_L$ ($\theta_H$) the angle between $L$ ($H$) and the $a$-axis.
 Minimizing with respect to $\delta \theta$ then leads to
 \begin{align}
-	\frac{\partial E}{\partial \delta \theta} = 0 &= 4 \Jpar \delta \theta - 2 g \mu_B H \sin(\theta_L - \theta_H) \nonumber\\
+	\frac{\partial E}{\partial \delta \theta} = 0 &= 4 \Jpar \delta \theta - 2 g \mu_B H \sin(\theta_L - \theta_H) \\
 	&\Leftrightarrow \nonumber\\
-	\delta \theta &= \frac{g\mu_B H \sin(\theta_L - \theta_H)}{2 \Jpar}.\nonumber
+	\delta \theta &= \frac{g\mu_B H \sin(\theta_L - \theta_H)}{2 \Jpar}.
 \end{align}
 Inserting this expression for $\delta \theta$ back into Eq.~\eqref{eq:GdMn2O5_zeeman_exp}, and keeping only the first order terms, we obtain the following expression for the Zeeman contribution through spin canting:
 \begin{align}
-	\label{eq:GdMn2O5_Zeeman}
-	E_Z &= -\frac{g^2\mu_B^2 H^2 \sin(\theta_L - \theta_H)^2}{\Jpar} = -\frac{g^2\mu_B^2 H^2 \left(1 - \cos(\theta_L - \theta_H)^2\right)}{\Jpar}\\
-	&=\frac{g^2\mu_B^2}{\Jpar}\left((\bm{H}\cdot\bm{L})^2 - H^2\right)\nonumber
+	E_Z &= -\frac{g^2\mu_B^2 H^2 \sin(\theta_L - \theta_H)^2}{\Jpar} = -\frac{g^2\mu_B^2 H^2 \left(1 - \cos(\theta_L - \theta_H)^2\right)}{\Jpar}\nonumber\\
+	&=\frac{g^2\mu_B^2}{\Jpar}\left((\bm{H}\cdot\bm{L})^2 - H^2\right)\label{eq:GdMn2O5_Zeeman}.
 \end{align}
 This energy gain is maximized when $\bm{L}$ is oriented perpendicular to $\bm{H}$ leading to $\bm L \cdot \bm H = 0$, which is exactly what happens in the well-known spin-flop transition.
-If a strong enough magnetic field is applied along the easy-axis of a system with a single AFM order parameter, a sudden flip of the spins perpendicular to the easy-axis will occur as soon as the possible gain from the Zeeman energy in the flopped state overcomes the lost easy-axis anisotropy energy. This spin-flopped state, with the AFM order perpendicular to $\bm{H}$, is exactly the one displayed in Fig.~\ref{fig:GdMn2O5_canting}(a).
+If a strong enough magnetic field is applied along the easy-axis of a system with a single AFM order parameter, a sudden flip of the spins perpendicular to the easy-axis will occur as soon as the possible gain from the Zeeman energy \eqref{eq:GdMn2O5_Zeeman} in the flopped state overcomes the lost easy-axis anisotropy energy. This spin-flopped state, with the AFM order perpendicular to $\bm{H}$, is exactly the one displayed in Fig.~\ref{fig:GdMn2O5_canting}(a).
 \\\\
-An additional energy contribution is a result of the geometric frustration which forces certain spins in the two chains to be parallel to each other, as shown by the two rightmost arrows in Fig.~\ref{fig:GdMn2O5_canting}(b).
+An additional energy contribution results from the geometric frustration which forces certain spins in the two chains to be parallel to each other, as shown by the two rightmost arrows in Fig.~\ref{fig:GdMn2O5_canting}(b).
 This is very unfavorable for the interchain AFM exchange with coefficient $\Jperp$, again leading to some gained energy if these spins cant slightly towards a more AFM alignment.
 \\\\
 Adopting a similar strategy as above, this contribution can be derived starting from
-\begin{equation}
-	E_{ic} = 2 \Jpar \cos(\delta \theta) + \Jperp \left(\cos(\theta_1 + \delta \theta - \theta_2) - \cos(\theta_1 - \theta_2 -\delta \theta)\right),
-\end{equation}
-where $\theta_1$ ($\theta_2$) signifies the angle w.r.t. the $a$-axis of $\bm{L}_1$ ($\bm{L}_2$).
+\begin{align}
+	E_{ic} &= \Jpar (\bm \sigma_{1, i} \cdot \bm \sigma_{1, i+1} + \bm \sigma_{2, i} \cdot \bm \sigma_{2, i+1}) + \Jperp(\bm \sigma_{1, i+1} \cdot \bm \sigma_{2,i+1}) \\
+	 &\approx 2 \Jpar \cos(\delta \theta) + \Jperp \left(\cos(\theta_1 + \delta \theta - \theta_2) - \cos(\theta_1 - \theta_2 -\delta \theta)\right),
+\end{align}
+where $\bm \sigma_{\alpha, i}$ denotes the $i$th spin of chain $\bm L_\alpha$, and $\theta_1$ ($\theta_2$) signifies the angle w.r.t. the $a$-axis of $\bm{L}_1$ ($\bm{L}_2$).
 Expanding again to second order leads to:
 \begin{equation}
 	E_{ic} = 2 \Jpar ( 1+ \delta \theta^2) - 2 \Jperp \sin(\theta_1 - \theta_2)\delta \theta. \label{eq:GdMn2O5_Eic_exp}
 \end{equation}
-Again minimizing this contribution with respect to $\delta \theta$, we find:
+Minimizing this contribution with respect to $\delta \theta$, leads to:
 \begin{equation}
 	\delta \theta = \frac{\Jperp}{2 \Jpar} \sin(\theta_1 - \theta_2).
 \end{equation}
-Substituting this expression for $\delta \theta$ into Eq.~\eqref{eq:GdMn2O5_Eic_exp}, and keeping only terms up to first order in $\frac{\Jperp^2}{\Jpar}$ since it is assumed that $\Jperp << \Jpar$, leads us to the final expression for this energy contribution:
+Substituting this expression for $\delta \theta$ into Eq.~\eqref{eq:GdMn2O5_Eic_exp}, and keeping only terms up to first order in $\frac{\Jperp^2}{\Jpar}$ since it is assumed that $\Jperp << \Jpar$, nets us the final expression for this energy contribution:
 \begin{equation}
 	E_{ic} = -\frac{\Jperp^2}{\Jpar}\sin(\theta_1 - \theta_2)^2 =  \frac{\Jperp^2}{\Jpar}(\cos(\theta_1 - \theta_2) - 1) = \frac{\Jperp^2}{\Jpar}(\bm{L}_1 \cdot \bm{L}_2)^2 - \frac{\Jperp^2}{\Jpar},
 \end{equation}
@@ -266,7 +267,7 @@ where $K_L$ denotes the strength of the easy-axis anisotropy, and $\bm n_\alpha$
 $\bm{n}_1=\left(\cos\theta_n, \sin\theta_n\right)$ and $\bm{n}_2=\left(\cos\theta_n, -\sin\theta_n\right)$ with $\theta_n = \rm{23.4}^\circ$.
 These are the fourfold axes of the pyramidally coordinated Mn ions, aligned with the long edges of the cyan chains in Fig.~\ref{fig:GdMn2O5_unit_cell}(a).
 \\\\
-Bringing everything together leads us to the contribution to the effective Hamiltonian that originates from the chains:
+Bringing everything together leads us to the total contribution of the chains to the effective Hamiltonian:
 \begin{equation}
 	H_L = \gamma(\bm{L}_1\cdot \bm{L}_2)^2
     +\sum_{\alpha}\chi((\bm{H}\cdot \bm{L}_\alpha)^2-H^2)
@@ -274,8 +275,8 @@ Bringing everything together leads us to the contribution to the effective Hamil
 \end{equation}
 with $\gamma = \frac{\Jperp^2}{\Jpar}$, and $\chi = \frac{g^2\mu_B^2}{\Jpar}$. 
 \\\\
-The next step is to find the combination of cross-order coupling terms between $\bm S_i$ and $\bm L_\alpha$ that transform as the unit representation of the symmetry group of the system.
-This combination of energy terms will then be invariant under all the symmetry operations of the system as is required.
+The next step is to find the combination of cross-order coupling terms between the Gd spins ($\bm S_i$) and the chains ($\bm L_\alpha$) that transform as the unit representation of the symmetry group of the system.
+This combination will then lead to the required invariance of the energy under the applications of all the symmetry operations of the system.
 In order to achieve this, we first list the generators of the paramagnetic parent P$bam$ phase:
 \begin{align}
 	I &: (x, y, z) \rightarrow (-x, -y, -z)\\
@@ -283,8 +284,8 @@ In order to achieve this, we first list the generators of the paramagnetic paren
 	2_y &: (x, y, z) \rightarrow (\frac{1}{2} - x, \frac{1}{2} + y, z)
 \end{align}
 $I$ and $2_z$ are the same symmetry operations in the 2D case we are solving.
-Next, a doubling of the unit cell is necessary to fit the overall AFM state, leading to an additional symmetry operation for the translation along the $a$-axis $a: (x, y, z) \rightarrow (x + a, y, z)$ (not taking spins into account), and a halving of the fractional translation $2_y: (x, y, z) \rightarrow (\frac{1}{4} - x, \frac{1}{2}+y, z)$.
-In effect, applying these symmetry operations to the degrees of freedom and bearing in mind the spin flip when transforming the chains between the two halves of the magnetic unit cell, leads to the following transformation table:
+Next, a doubling of the unit cell is necessary to fit the overall AFM state, leading to an additional symmetry operation for the translation along the $a$-axis $a: (x, y, z) \rightarrow (x + a, y, z)$ (not taking spins into account), and a halving of the $x$-component of the fractional translation $2_y: (x, y, z) \rightarrow (\frac{1}{4} - x, \frac{1}{2}+y, z)$.
+In effect, applying these symmetry operations to the degrees of freedom of our model, and bearing in mind the spin flip when transforming the chains between the two halves of the magnetic unit cell, leads to the following transformation table:
 \begin{table}[h]
 \centering
 \begin{tabular}{|l|lllllllllll|}
@@ -295,10 +296,10 @@ $2_y$ & $S_4$ & $S_3$ & $S_2$ & $S_1$ & $S_8$ & $S_7$ & $S_6$ & $S_5$ & $L_1$ & 
 a & $S_5$ & $S_6$ & $S_7$ & $S_8$ & $S_1$ & $S_2$ & $S_3$ & $S_4$ & -$L_1$ & -$L_2$ & $P_b$ \\ \cline{1-12}
 T & $-S_5$ & $-S_6$ & $-S_7$ & $-S_8$ & $-S_1$ & $-S_2$ & $-S_3$ & $-S_4$ & -$L_1$ & -$L_2$ & $P_b$ \\ \cline{1-12}
 \end{tabular}
-\caption{\label{tab:GdMn2O5_symm}{\bf Symmetry operations in GdMn$_2$O$_5$.} Transformations of Gd spins, AFM vectors and $P_b$ under the symmetry operations of GdMn$_2$O$_5$.}
+\caption{\label{tab:GdMn2O5_symm}{\bf Symmetry operations in GdMn$_2$O$_5$.} Transformations of Gd spins ($S_i$), AFM vectors ($\bm L_\alpha$) and polarization ($P_b$) under the symmetry operations of GdMn$_2$O$_5$.}
 \end{table}\\\\
 We start with the Heisenberg exchange terms between the Gd spins ($\bm{S}_i$) and the Mn chains ($\bm{L}_1$ and $\bm{L}_2$), with the effective exchange constants $v_1$ and $v_2$.
-The former (latter) couples each Gd spin with the chain that harbors the closest (furthest) Mn ion. See the yellow arrows in Fig.~\ref{fig:GdMn2O5_unit_cell}(a) for a schematic depiction of these exchange paths.
+The former (latter) couples each Gd spin with the chain that harbors the closest (furthest) Mn ion. See the orange arrows in Fig.~\ref{fig:GdMn2O5_unit_cell}(a) for a schematic depiction of these exchange paths.
 Starting from terms with $\bm{S}_1$ and $\bm{S}_2$, and taking the above table of transformations into account, we can identify the following sets of terms:
 \begin{align}
 	\bm{S}_1\cdot(v_1 \bm{L}_2 + v_2 \bm{L}_1) \xrightarrow{I} \bm{S_8}\cdot(v_1 \bm{L}_2 - v_2 \bm{L}_1) \xrightarrow{a} \bm{S_4} \cdot (- v_1 \bm{L}_2 + v_2 \bm{L}_1) \xrightarrow{I} \bm{S_5} \cdot (-v_1 \bm{L}_2 - v_2 \bm{L}_1), \nonumber\\
@@ -308,7 +309,7 @@ The combined sum of them transforms according to the identity representation, le
 \begin{align}
     H_{LS} =& (\bm{S}_1 - \bm{S}_5) \cdot (v_1 \bm{L}_2 + v_2 \bm{L}_1) + (\bm{S}_2 - \bm{S}_6) \cdot (v_1 \bm{L}_1 + v_2 \bm{L}_2) + \nonumber \\ &(\bm{S}_3 - \bm{S}_7) \cdot (v_1 \bm{L}_1 - v_2 \bm{L}_2) + (\bm{S}_4 - \bm{S}_8) \cdot (-v_1 \bm{L}_2 + v_2 \bm{L}_1).
 \end{align}
-A similar process can be applied starting from $P_b \, \bm{S_1}\cdot(\beta_2 \bm{L}_1 + \beta_3 \bm{L}_2)$ and $P_b\, \bm{S_2}\cdot(\beta_2 \bm{L}_1 + \beta_3 \bm{L}_2)$, which signify the symmetric Heisenberg exchange striction contribution to the Hamiltonian. This leads to
+A similar process can be applied starting from $P_b \, \bm{S_1}\cdot(\beta_2 \bm{L}_1 + \beta_3 \bm{L}_2)$ and $P_b\, \bm{S_2}\cdot(\beta_2 \bm{L}_1 + \beta_3 \bm{L}_2)$, which signify the symmetric Heisenberg exchange striction contributions to the Hamiltonian. This leads to:
 \begin{align}
 	H_{P_b}=&-P_b[E_b + \beta_1 (\bm{L}_1\cdot \bm{L}_2)+
     (\bm{S}_1-\bm{S}_5)(\beta_2 \bm{L}_2 + \beta_3 \bm{L}_1) +
@@ -321,7 +322,7 @@ We can identify three final terms that originate purely from the Gd spins:
 \begin{equation}
      H_S=\frac{1}{2}(g \mu_B)^2\sum_{i\neq j}\left(\frac{\bm{S}_i\cdot \bm{S}_j}{r_{ij}^3}-3\frac{(\bm{S}_i\cdot \bm{r}_{ij})(\bm{S}_j\cdot \bm{r}_{ij})}{r_{ij}^5}\right) - \sum_i\left( K_S(\bm{N}_i\cdot \bm{S}_i)^2 + g\mu_\mathrm{B} \bm{H} \cdot \bm{S}_i\right). 
 \end{equation}
-The first describes the magneto-dipolar interaction between Gd spins, which could be relatively large due to the size of the spins and relative proximity to the neighbors.
+The first describes the magneto-dipolar interaction between Gd spins, which could be relatively large due to the size of the Gd spins (nominally S=7/2) and relative proximity of the neighbors.
 In the numerical simulations these interactions were restricted to their five nearest neighbors, including periodic images.
 Adding further neighbors did not lead to qualitative differences in the results.
 The term with $K_S$ denotes the easy-axis anisotropy for the Gd ions, this time with anisotropy axes $\bm{N}_i$ which are unit vectors having alternating angles $\pm 12^\circ$ with respect to the $a$-axis.
